arena/bindings/player/player.h

// Generated by `wit-bindgen` 0.60.0. DO NOT EDIT!
#ifndef __BINDINGS_PLAYER_H
#define __BINDINGS_PLAYER_H
#ifdef __cplusplus
extern "C" {
#endif

#include <stdint.h>
#include <stdbool.h>
#include <stddef.h>

typedef struct player_string_t {
  uint8_t*ptr;
  size_t len;
} player_string_t;

typedef struct {
  bool is_some;
  player_string_t val;
} player_option_string_t;

typedef struct {
  bool is_err;
  union {
    player_string_t err;
  } val;
} player_result_void_string_t;

typedef struct {
  uint8_t *ptr;
  size_t len;
} player_list_u8_t;

typedef struct {
  player_list_u8_t *ptr;
  size_t len;
} player_list_list_u8_t;

typedef struct {
  bool is_err;
  union {
    player_list_list_u8_t ok;
    player_string_t err;
  } val;
} player_result_list_list_u8_string_t;

// Imported Functions from `softmax:player/log@0.1.0`
extern void softmax_player_log_line(player_string_t *level, player_string_t *msg);

// Exported Functions from `player`
bool exports_player_start(uint32_t slot, player_string_t *maybe_config, player_string_t *err);
bool exports_player_on_message(player_list_u8_t *message, player_list_list_u8_t *ret, player_string_t *err);

// Helper Functions

void player_option_string_free(player_option_string_t *ptr);

void player_result_void_string_free(player_result_void_string_t *ptr);

void player_list_u8_free(player_list_u8_t *ptr);

void player_list_list_u8_free(player_list_list_u8_t *ptr);

void player_result_list_list_u8_string_free(player_result_list_list_u8_string_t *ptr);

// Sets the string `ret` to reference the input string `s` without copying it
void player_string_set(player_string_t *ret, const char*s);

// Creates a copy of the input nul-terminated string `s` and
// stores it into the component model string `ret`.
void player_string_dup(player_string_t *ret, const char*s);

// Creates a copy of the input string `s` with length `len` and
// stores it into the component model string `ret`.
// The length is specified in code units (bytes for UTF-8, 16-bit values for UTF-16).
void player_string_dup_n(player_string_t *ret, const char*s, size_t len);

// Deallocates the string pointed to by `ret`, deallocating
// the memory behind the string.
void player_string_free(player_string_t *ret);

#ifdef __cplusplus
}
#endif
#endif